# operator-ledger

./: Cargo.toml  README.md  makefile
.cargo/: config.toml
.github/workflows/: ci.yaml
config/: program.env
operator-history-core/src/: circ_buf.rs  client_version.rs  operator_history_entry.rs
operator-history-program/: Cargo.toml
operator-history-program/src/: initialize_config.rs  lib.rs
