[workspace]
members = [
	"operator-history-core",
	"operator-history-program",
	"operator-history-sdk"
]
resolver = "2"

[workspace.dependencies]
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", rev = "175b594f24c8913448942685c7345f7521dd0a41" }
operator-history-core = { path = "operator-history-core", version = "0.1.0" }
operator-history-sdk = { path = "operator-history-sdk", version = "0.1.0" }
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-info = "2.2.1"
solana-decode-error = "2.2.1"
solana-msg = "2.2.1"
solana-program = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-sysvar = "2.2.1"
thiserror = "1.0.57"
